# A.R.S

./: AGENTS.md  AUDIT_CODEBASE_v2.md  CHANGELOG.md  CMakeLists.txt  FIX_BACKLOG.md  Initialize-Idf.ps1  README.md  esp_idf.json  idf_cmd_init.bat  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  task.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
components/: AGENTS.md
components/board/: AGENTS.md  CMakeLists.txt  Kconfig.projbuild  board.c  board.h  board_pins.h  idf_component.yml
components/board/include/: board.h  board_orientation.h
components/board/src/: board.c  board_orientation.c
components/compliance_engine/: AGENTS.md  CMakeLists.txt
components/compliance_rules/: CMakeLists.txt  compliance_rules.c  compliance_rules.h
components/core_service/: AGENTS.md  CMakeLists.txt  core_service_alerts.c
components/data_manager/: AGENTS.md  CMakeLists.txt  Kconfig.projbuild
components/display/: CMakeLists.txt  display_driver.c  display_driver.h
components/documents/: CMakeLists.txt  documents_service.c  documents_service.h
components/domain_models/: CMakeLists.txt  domain_models.c  domain_models.h
components/export_share/: CMakeLists.txt  export_share.c  export_share.h
components/gpio/: AGENTS.md  CMakeLists.txt  gpio.c  gpio.h
components/i2c/: AGENTS.md  CMakeLists.txt  i2c.c  i2c.h  i2c_bus_shared.c  i2c_bus_shared.h
components/i2c_bus_shared/: CMakeLists.txt  i2c_bus_shared.c  i2c_bus_shared.h
components/io_extension/: AGENTS.md  CMakeLists.txt  Kconfig  io_extension.c  io_extension.h
components/iot/: AGENTS.md  CMakeLists.txt  Kconfig
components/joltwallet__littlefs/: AGENTS.md
components/lvgl_port/: AGENTS.md  CMakeLists.txt  Kconfig  idf_component.yml  lv_conf.h  lvgl_port.c  lvgl_port.h
components/net/: AGENTS.md  CMakeLists.txt  Kconfig
components/reptile_storage/: AGENTS.md  CMakeLists.txt
components/rgb_lcd_port/: AGENTS.md  CMakeLists.txt  Kconfig.projbuild  rgb_lcd_port.c  rgb_lcd_port.h
components/sd/: AGENTS.md  CMakeLists.txt  Kconfig  sd.c  sd.h  sd_host_extcs.c  sd_host_extcs.h  sd_service.c  sd_service.h
components/storage_core/: CMakeLists.txt  idf_component.yml  storage_core.c  storage_core.h
components/touch/: AGENTS.md  CMakeLists.txt  Kconfig  gt911.c  gt911.h  touch.c  touch.h  touch_gt911.c  touch_gt911.h
components/touch_orient/: AGENTS.md  CMakeLists.txt  touch_orient.c
components/touch_transform/: AGENTS.md  CMakeLists.txt  Kconfig  touch_transform.c  touch_transform.h  touch_transform_storage.c
components/touch_transform/include/: touch_transform.h
components/touch_transform/test/: test_touch_transform.c
components/ui/: AGENTS.md  CMakeLists.txt  ui.c  ui.h  (+17 more)
docs/: AGENTS.md  AUDIT_CODEBASE.md  BUILD.md  DIRECTIVES.md  IOEXT_SD_failure_analysis.md  IOEXT_invalid_response_rootcause.md  RAPPORT_AUDIT_COMPAT_IDF61_LVGL94.md  REVIEW_CHECKLIST.md  SD_IOEXT_root_cause.md  VALIDATION.md  architecture.md  build_fix_report.md  build_notes.md  build_run.md  build_windows.md  correctifs #U00e0 apporter.md  data_model.md  fix_build_20251227.md  fix_display_vsync_touch_sd.md  fix_gt911_wdt.md  fix_report_2025-12-24.md  fix_report_build_kconfig.md  fix_restore_display_sd.md  fix_rgb_wdt_build.md  fix_sd_extcs_report.md  fix_sd_i2c_rootcause.md  fix_vsync_touch_sd.md  fix_wdt_i2c_cache_report.md  fix_wdt_lcd_rgb_gt911.md  hardware_waveshare_7b_pinmap.md  hw_waveshare_7b_pinout.md  ioext_invalid_response_fix.md  log_analysis.md  lvgl_direct_mode_rgb.md  monitor_windows_troubleshooting.md  monitoring.md  plan_correctifs.md  rapport code source projet.md  rapport_affichage_instable.md  rapport_affichage_rgb_lvgl.md  (+44 more)
main/: AGENTS.md  CMakeLists.txt  app_main.c  idf_component.yml  lv_conf.h  main.c
tools/: AGENTS.md  env.cmd  env.ps1  lint_components.py  setup_env.sh
(+53 files in other folders)
